# seambot

./: AI.djot  CONTRIBUTING.md  Cargo.toml  Containerfile  ECOSYSTEM.scm  META.scm  README.adoc  ROADMAP.adoc  STATE.scm
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: codeql.yml  scorecard.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machine_readable/6scm/: AGENTIC.scm  ECOSYSTEM.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.machines_readable/6scm/: STATE.scm
fuzz/: Cargo.toml
spec/schema/: seam-register.schema.json
src/: checks.rs  fleet.rs  github.rs  hidden_channels.rs  main.rs  register.rs  report.rs  seam.rs
src/forge/: bitbucket.rs  github.rs  gitlab.rs  mod.rs
tests/: check_register.rs  github_integration.rs
tests/fixtures/valid-register/spec/seams/: seam-register.json
tests/fixtures/valid-register/spec/seams/checklists/: api-to-db.adoc
tests/fixtures/valid-register/spec/seams/conformance/: api-to-db-conformance.adoc
